# QuantWithAI

./: .env.example  .gitignore  README.md  claude.md  env.example  pyproject.toml  requirements-kiwoom.txt  sync_docs.sh
.claude/: settings.local.json
backtesting/: README.md  __init__.py
backtesting-rs/: Cargo.toml
backtesting-rs/src/: data.rs  engine.rs  lib.rs  main.rs  strategy.rs
docs/: 2026_자산관리_계획.md  AI_Trading_Agent_Prompt.md  README.md  레버리지_전략.md  알고리즘_트레이딩_시스템_구축.md  퀀트_트레이딩_가이드.md  퀀트_트레이딩_상세_계획.md  트레이딩_시작_가이드.md
genport/: __init__.py  backtest.py  browser.py  models.py  parser.py
scripts/: setup_environments.ps1  start_kiwoom_server.bat
skills/: genport_backtest.md  genport_deploy.md  genport_scrape.md
src/: __init__.py
src/broker/: __init__.py  interface.py
src/broker/kiwoom/: __init__.py  client.py  server.py
src/data/: __init__.py
src/strategy/: __init__.py
strategies/: README.md  __init__.py
tests/: test_broker_interface.py  test_genport_browser.py  test_kiwoom_client.py
