[package]
name = "backtesting-rs"
version = "0.1.0"
edition = "2021"
authors = ["Hoyoun Jung <ghdbsl98@gmail.com>"]
description = "High-performance backtesting engine for algorithmic trading"

[lib]
name = "backtesting_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "backtest"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV/Data handling
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Parallelism
rayon = "1.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "backtest_benchmark"
harness = false

